LayoutTests/inspector/canvas/resources/create-context-utilities.js
@@ -30,12 +30,35 @@ function destroyCanvases() {
 TestPage.registerInitializer(() => {
     let suite = null;
 
+    function sanitizeURL(url) {
+        return url.replace(/^.*?LayoutTests\//, "");
+    }
+
     function awaitCanvasAdded(contextType) {
         return WI.canvasManager.awaitEvent(WI.CanvasManager.Event.CanvasAdded)
         .then((event) => {
             let canvas = event.data.canvas;
             let contextDisplayName = WI.Canvas.displayNameForContextType(contextType);
             InspectorTest.expectEqual(canvas.contextType, contextType, `Canvas context should be ${contextDisplayName}.`);
+
+            for (let i = 0; i < canvas.backtrace.length; ++i) {
+                let callFrame = canvas.backtrace[i];
+                let traceText = `  ${i}: `;
+                traceText += callFrame.functionName || "(anonymous function)";
+
+                if (callFrame.nativeCode)
+                    traceText += " - [native code]";
+                else if (callFrame.programCode)
+                    traceText += " - [program code]";
+                else if (callFrame.sourceCodeLocation) {
+                    let location = callFrame.sourceCodeLocation;
+                    traceText += " - " + sanitizeURL(location.sourceCode.url) + `:${location.lineNumber}:${location.columnNumber}`;
+                }
+
+                InspectorTest.log(traceText);
+            }
+
+            InspectorTest.log("");
 
             return canvas;
         });
